# kaizen-app

./: .gitignore  AGENT.md  README.md  docker-compose.yml
backend/: .dockerignore  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
backend/access_control/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/access_control/migrations/: 0001_initial.py
backend/analytics/: apps.py  permissions.py  urls.py  views.py
backend/analytics/services/: exporters.py  metrics.py
backend/app/: settings.py  urls.py
backend/gamification/: admin.py  apps.py  handlers.py  models.py  serializers.py  urls.py  views.py
backend/gamification/migrations/: 0001_initial.py
backend/gamification/services/: badges.py  engine.py  leaderboard.py  levels.py  rewards.py  streaks.py
backend/ideas/: admin.py  apps.py  models.py  pagination.py  permissions.py  serializers.py  tests.py  views.py
backend/ideas/migrations/: 0001_initial.py  0002_initial.py  0002_kaizenpost_status.py  0003_alter_comment_options_alter_kaizenpost_options_and_more.py  0003_postsurvey.py  0004_notification.py  0005_category_and_more.py  0006_kaizenpost_assigned_manager_and_more.py  0007_alter_comment_options_comment_parent_and_more.py  0008_bookmark.py  0009_kaizenpost_assigned_director_and_more.py  0010_seed_approvals_for_existing.py
backend/ideas/services/: __init__.py  approval.py  post_survey_calculator.py
backend/users/: admin.py  fields.py  models.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py  (+6 more)
(+129 files in other folders)
